added reem font

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,6 +31,7 @@
       "imports": [
         "scss/_import.scss",
         "scss/utility/_variables.scss",
+        "scss/utility/_typo.scss",
         "scss/utility/_mixins.scss",
         "scss/utility/_animations.scss",
         "scss/components/_general.scss",
