added @TheRealKaina's stuff :squint:

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,6 +27,20 @@
   },
   "imports": [
     {
+      "path": "scss/_import.scss",
+      "imports": [
+        "scss/utility/_variables.scss",
+        "scss/utility/_typo.scss",
+        "scss/utility/_mixins.scss",
+        "scss/utility/_animations.scss",
+        "scss/components/_general.scss",
+        "scss/components/_navbar.scss",
+        "scss/components/_opening.scss",
+        "scss/components/_categories.scss",
+        "scss/components/_about.scss"
+      ]
+    },
+    {
       "path": "scss/style.scss",
       "imports": [
         "scss/_import.scss",
@@ -37,19 +51,8 @@
         "scss/components/_general.scss",
         "scss/components/_navbar.scss",
         "scss/components/_opening.scss",
-        "scss/components/_categories.scss"
-      ]
-    },
-    {
-      "path": "scss/_import.scss",
-      "imports": [
-        "scss/utility/_variables.scss",
-        "scss/utility/_mixins.scss",
-        "scss/utility/_animations.scss",
-        "scss/_general.scss",
-        "scss/components/_navbar.scss",
-        "scss/components/_opening.scss",
-        "scss/components/_categories.scss"
+        "scss/components/_categories.scss",
+        "scss/components/_about.scss"
       ]
     }
   ],
@@ -95,7 +98,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7881,
+    "port": 7889,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
